--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@
                   <li><a href="#menu">Menu</a></li>
                   <li><a href="#">Galeria</a></li>
                   <li><a href="#">Kontakt</a></li>
-                <!-- <li class="align-self-middle">Rybnicka 43, Lyski</li>
-                <li><button type="button" class="button hollow">790 850 580</button></li> -->
               </ul>
             </div>
             <div class="top-social cell small-2 medium-2 large-2 text-right"><a href="https://www.facebook.com/Grzechu-Warte-2211861392436989/" class="cell small-6 medium-6 large-6 align-self-middle text-right"><i class="fab fa-facebook-square"></i></a></div>
@@ -591,14 +589,40 @@
       </section>
     </main>
 
-    <footer>
+    <!-- GALLERY -->
+    <div class="gallery-container">
+      <div class="arrow text-center"></div>
+      <h4 class="text-center">Poznaj nas</h4>
+      <div class="gallery"></div>
+    </div>
+    <!-- MAP -->
+    <div class="map">
+      <div class="arrow text-center"></div>
+      <h4 class="text-center">Tu jesteśmy</h4>
+      <div id="map"></div>
+    </div>
 
+    <footer>
+        <div class="grid-x grid-margin-x footer-info-container">
+            <div class="footer-info cell small-12 medium-4 large-4 text-center">
+              <p class="restaurant-name">Restauracja Grzechu Warte</p>
+              <p>ul. Rybnicka 43</p>
+              <p>44-295 Lyski</p>
+            </div>
+            <div class="footer-slogan cell small-12 medium-7 large-8 text-center align-self-middle">
+                <button class="button large"><a href="#">790 850 580</a></button>
+            </div>
+        </div>
     </footer>
 
     <script src="node_modules/jquery/dist/jquery.js"></script>
     <script src="node_modules/what-input/dist/what-input.js"></script>
     <script src="node_modules/foundation-sites/dist/js/foundation.js"></script>
     <script src="js/app.js"></script>
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBLZ5RzBQnOpjfK6wz78Z53SelZSdtSXYA&callback=initMap">
+    </script>
+
 
   </body>
 </html>
