--- a/index.html
+++ b/index.html
@@ -593,7 +593,40 @@
     <div class="gallery-container">
       <div class="arrow text-center"></div>
       <h4 class="text-center">Poznaj nas</h4>
-      <div class="gallery"></div>
+      <div class="gallery grid-x">
+          <!-- <div class="cell align-center">
+              <div class="product-image-gallery text-center">
+                <img class="pdp-product-image" id="main-product-image" src="https://placehold.it/350x350?text=Image+1" alt="">
+                <br>
+                <ul class="menu product-thumbs align-center">
+                  <li> <a class="sim-thumb" data-image="https://placehold.it/350x350?text=Image+1"><img src="https://placehold.it/80x80" alt=""></a> </li>
+                  <li> <a class="sim-thumb" data-image="https://placehold.it/350x350?text=Image+2"><img src="https://placehold.it/80x80" alt=""></a> </li>
+                  <li> <a class="sim-thumb" data-image="https://placehold.it/350x350?text=Image+3"><img src="https://placehold.it/80x80" alt=""></a> </li>
+                  <li> <a class="sim-thumb" data-image="https://placehold.it/350x350?text=Image+4"><img src="https://placehold.it/80x80" alt=""></a> </li>
+                  <li> <a class="sim-thumb" data-image="https://placehold.it/350x350?text=Image+5"><img src="https://placehold.it/80x80" alt=""></a> </li>
+                </ul>
+              </div>
+            </div>             -->
+            <div class="mini-img small-12 medium-7 large-7">
+                <ul class="menu product-thumbs align-center no-bullet">
+                    <li><a class="sim-thumb" data-image="img/inside2.jpg"><img src="img/inside2.jpg" alt=""></a></li>
+                    <li><a class="sim-thumb" data-image="img/inside3.jpg"><img src="img/inside3.jpg" alt=""></a></li>
+                    <li><a class="sim-thumb" data-image="img/outside.jpg"><img src="img/outside.jpg" alt=""></a></li>
+                    <li><a class="sim-thumb" data-image="img/outside2.jpg"><img src="img/outside2.jpg" alt=""></a></li>
+                    <!-- <li><a class="sim-thumb" data-image="https://placehold.it/350x350?text=Image+5"><img src="img/inside4.jpg" alt=""></a></li> -->
+                    <li><a class="sim-thumb" data-image="img/bar.jpg"><img src="img/bar.jpg" alt=""></a></li>
+                    <li><a class="sim-thumb" data-image="img/inside5.jpg"><img src="img/inside5.jpg" alt=""></a></li>
+                    <li><a class="sim-thumb" data-image="img/inside6.jpg"><img src="img/inside6.jpg" alt=""></a></li>
+                    <li><a class="sim-thumb" data-image="img/inside7.jp"><img src="img/inside7.jpg" alt=""></a></li>
+                    <li><a class="sim-thumb" data-image="img/kids.jpg"><img src="img/kids.jpg" alt=""></a></li>
+                    <li><a class="sim-thumb" data-image="img/kids2.jpg"><img src="img/kids2.jpg" alt=""></a></li>
+
+                  </ul>
+            </div>
+            <div class="cell small-12 medium-5 large-5 main-img text-center">
+                <img id="main-product-image" src="img/inside.jpg" alt="">
+            </div>  
+      </div>
     </div>
     <!-- MAP -->
     <div class="map">
@@ -604,12 +637,12 @@
 
     <footer>
         <div class="grid-x grid-margin-x footer-info-container">
-            <div class="footer-info cell small-12 medium-4 large-4 text-center">
+            <div class="footer-info cell small-12 medium-7 large-7 text-center">
               <p class="restaurant-name">Restauracja Grzechu Warte</p>
               <p>ul. Rybnicka 43</p>
               <p>44-295 Lyski</p>
             </div>
-            <div class="footer-slogan cell small-12 medium-7 large-8 text-center align-self-middle">
+            <div class="footer-slogan cell small-12 medium-5 large-5 text-center align-self-middle">
                 <button class="button large"><a href="#">790 850 580</a></button>
             </div>
         </div>
