--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
                     <li><a class="sim-thumb" data-image="img/bar.jpg"><img src="img/bar.jpg" alt=""></a></li>
                     <li><a class="sim-thumb" data-image="img/inside5.jpg"><img src="img/inside5.jpg" alt=""></a></li>
                     <li><a class="sim-thumb" data-image="img/inside6.jpg"><img src="img/inside6.jpg" alt=""></a></li>
-                    <li><a class="sim-thumb" data-image="img/inside7.jp"><img src="img/inside7.jpg" alt=""></a></li>
+                    <li><a class="sim-thumb" data-image="img/inside7.jpg"><img src="img/inside7.jpg" alt=""></a></li>
                     <li><a class="sim-thumb" data-image="img/kids.jpg"><img src="img/kids.jpg" alt=""></a></li>
                     <li><a class="sim-thumb" data-image="img/kids2.jpg"><img src="img/kids2.jpg" alt=""></a></li>
 
