--- a/index.html
+++ b/index.html
@@ -94,18 +94,16 @@
                     <img class="orbit-image" src="img/img-tiny-jpg/kids2-round.png" alt="Kids room">
                     <div class="orbit-slogan text-center show-for-large">
                       <h3>Kącik herbaciany i miejsce dla dzieci</h3>
-                      <!-- <h5>Z wołowiną, wieprzowiną lub wege!</h5> -->
+                      <h5>Coś dla dużych i dla małych!</h5>
                       <button class="button orbit-button" type="button"><a href="#galeria">Zobacz galerię</a></button>
                     </div>
                   </figure>
                   <div class="hide-for-large orbit-slogan-mobile text-center">
-                    <h3>Sześć burgerów do wyboru.</h3>
-                    <h5>Z wołowiną, wieprzowiną lub wege!</h5>
+                    <h3>Kącik herbaciany i miejsce dla dzieci</h3>
+                    <h5>Coś dla dużych i dla małych!</h5>
                     <button class="button orbit-button" type="button"><a href="#menu">Zobacz menu</a></button>
                   </div>
-        
                 </li>
-  
             </ul>
           </div>
           <nav class="orbit-bullets">
