--- a/index.html
+++ b/index.html
@@ -987,7 +987,7 @@
               <p>44-295 Lyski</p>
             </div>
             <div class="time cell small-12 medium-4 large-4 text-center align-self-middle">
-                <p><img class="clock" src="img/clock (1).svg" alt="Zegar">13.00&ndash;22.00</p>
+                <p><img class="clock" src="img/svg/calendar.svg" alt="Zegar">13.00&ndash;22.00</p>
                 <p class="days">od wtorku do niedzieli</p>
             </div>
             <div class="footer-slogan cell small-12 medium-4 large-4 text-center align-self-middle">
